Fix image width on mobile

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,6 +2,7 @@
 $card-image-height: 100px;
 $card-height: $card-image-height * 4;
 $table-thumbnail: 40px;
+$mobile-breakpoint: 600px;
 
 // Colors: Brand Assignments
 $brand-dark-blue: #2b5f6e;
